Exercise 2 to be done

--- a/DM2020_Lab1_Homework.ipynb
+++ b/DM2020_Lab1_Homework.ipynb
@@ -22,6 +22,11 @@
     "colab": {
       "name": "DM2020-Lab1-Homework.ipynb",
       "provenance": [],
+      "collapsed_sections": [
+        "db1s3M92srkH",
+        "JYxm_sDYsrkI",
+        "_vEbi102we3U"
+      ],
       "include_colab_link": true
     }
   },
@@ -42,12 +47,12 @@
         "id": "db1s3M92srkH"
       },
       "source": [
-        "### Student Information\n",
+        "## Student Information\n",
         "Name: **陳彥如 Debbie Chen**\n",
         "\n",
         "Student ID: **106034026**\n",
         "\n",
-        "GitHub ID: **3DebbieChen9**"
+        "GitHub ID: 3DebbieChen9"
       ]
     },
     {
@@ -65,7 +70,7 @@
         "id": "JYxm_sDYsrkI"
       },
       "source": [
-        "### Instructions"
+        "## Instructions"
       ]
     },
     {
@@ -109,15 +114,147 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_vEbi102we3U"
+      },
+      "source": [
+        "## Initial"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "dLkQ6NQ4tCxd"
       },
       "source": [
-        ""
+        "# TEST necessary for when working with external scripts\n",
+        "%load_ext autoreload\n",
+        "%autoreload 2"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0NX1PjlzwtUt"
+      },
+      "source": [
+        "## First: Take home exercise"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0RyU_vALwdRH"
+      },
+      "source": [
+        "# categories\n",
+        "categories = ['alt.atheism', 'soc.religion.christian', 'comp.graphics', 'sci.med']"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2ORjIjHTwz-4",
+        "outputId": "5f3efb09-43f8-45fa-f4b1-b855ed5c6b2b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        }
+      },
+      "source": [
+        "# obtain the documents containing the categories provided\n",
+        "from sklearn.datasets import fetch_20newsgroups\n",
+        "\n",
+        "twenty_train = fetch_20newsgroups(subset='train', categories=categories, \\\n",
+        "                                  shuffle=True, random_state=42)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading 20news dataset. This may take a few minutes.\n",
+            "Downloading dataset from https://ndownloader.figshare.com/files/5975967 (14 MB)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F9TSwSklw_E4"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# my functions\n",
+        "import helpers.data_mining_helpers as dmh\n",
+        "\n",
+        "# construct dataframe from a list\n",
+        "X = pd.DataFrame.from_records(dmh.format_rows(twenty_train), columns= ['text'])"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6ssDtOcO0eXh"
+      },
+      "source": [
+        "# add category to the dataframe\n",
+        "X['category'] = twenty_train.target"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4ArJv5hs0fwd"
+      },
+      "source": [
+        "# add category label also\n",
+        "X['category_name'] = X.category.apply(lambda t: dmh.format_labels(t, twenty_train))"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-K31uhFv2uN9"
+      },
+      "source": [
+        "### ** >>> Exercise 2 (take home):** \n",
+        "Experiment with other querying techniques using pandas dataframes. Refer to their [documentation](https://pandas.pydata.org/pandas-docs/stable/indexing.html) for more information. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pj-zQEy-0het"
+      },
+      "source": [
+        " #Answer here\n"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dtlDIivI3H1Z"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
